--- a/app/views/signup.ejs
+++ b/app/views/signup.ejs
@@ -20,6 +20,12 @@
 <script type="text/javascript" src="/lib/angular-resource/angular-resource.js"></script>
 <script type="text/javascript" src="/lib/angularUtils-pagination/dirPagination.js"></script>
 
+<script type="text/javascript" src="/articles/articles.client.module.js"></script>
+<script type="text/javascript" src="/articles/controllers/articles.client.controller.js"></script>
+<script type="text/javascript" src="/articles/controllers/listdata.js"></script>
+<script type="text/javascript" src="/articles/services/articles.client.service.js"></script>
+<script type="text/javascript" src="/articles/config/articles.client.routes.js"></script>
+
 <script type="text/javascript" src="/example/example.client.module.js"></script>
 
 <script type="text/javascript" src="/example/controllers/example.client.controller.js"></script>
