--- a/public/articles/views/moduls.html
+++ b/public/articles/views/moduls.html
@@ -1,20 +1,13 @@
-<!DOCTYPE html>
-<html xmlns:ng="http://angularjs.org">
 <head>
     <script src="/lib/jquery/dist/jquery.js"></script>
     <link href="/lib/bootstrap/dist/css/bootstrap.css" rel="stylesheet" />
     <link href="/lib/bootstrap/dist/css/bootstrap.css" rel="stylesheet" />
     <link href="/lib/bootstrap/dist/css/bootstrap-theme.css" rel="stylesheet" />
     <script src="/lib/bootstrap/dist/js/bootstrap.js" type="text/javascript"></script>
-    <link href="/css/styles.css" rel="stylesheet" />
-    <title><%= title %></title>
+
+
 </head>
 <body>
-
-<section ng-view></section>
-<script type="text/javascript">
-    window.user = <%- user || 'null' %>;
-</script>
 
 <script type="text/javascript" src="/lib/angular/angular.js"></script>
 <script type="text/javascript" src="/lib/angular-route/angular-route.js"></script>
@@ -36,5 +29,10 @@
 <script type="text/javascript" src="/users/services/authentication.client.service.js"></script>
 
 <script type="text/javascript" src="/application.js"></script>
+
+<div>
+    +++inside articles\views =+++++++++++++++++++
+</div>
 </body>
-</html>
+
+
