--- a/public/example/views/example.client.view.html
+++ b/public/example/views/example.client.view.html
@@ -1,4 +1,4 @@
-<link href="/css/style.css" rel="stylesheet" />
+<link href="/css/styles.css" rel="stylesheet" />
 
 <div class="navbar navbar-inverse">
     <section ng-controller="ExampleController">
