--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -7,15 +7,23 @@
     <link href="/lib/bootstrap/dist/css/bootstrap-theme.css" rel="stylesheet" />
     <script src="/lib/bootstrap/dist/js/bootstrap.js" type="text/javascript"></script>
     <link href="/css/styles.css" rel="stylesheet" />
+
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+
     <title><%= title %></title>
 </head>
 <body>
+<div id="wrapper">
 
-<section ng-view></section>
-<script type="text/javascript">
-    window.user = <%- user || 'null' %>;
+        <section ng-view></section>
+
+    <script type="text/javascript">
+        window.user = <%- user || 'null' %>;
 </script>
+</div>
 
+<script type="text/javascript" src="/socket.io/socket.io.js"></script>
 <script type="text/javascript" src="/lib/angular/angular.js"></script>
 <script type="text/javascript" src="/lib/angular-route/angular-route.js"></script>
 <script type="text/javascript" src="/lib/angular-resource/angular-resource.js"></script>
@@ -34,6 +42,12 @@
 
 <script type="text/javascript" src="/users/users.client.module.js"></script>
 <script type="text/javascript" src="/users/services/authentication.client.service.js"></script>
+
+<!-- Load the chat module -->
+<script type="text/javascript" src="/chat/chat.client.module.js"></script>
+<script type="text/javascript" src="/chat/services/socket.client.service.js"></script>
+<script type="text/javascript" src="/chat/controllers/chat.client.controller.js"></script>
+<script type="text/javascript" src="/chat/config/chat.client.routes.js"></script>
 
 <script type="text/javascript" src="/application.js"></script>
 </body>
