--- a/app/views/signup.ejs
+++ b/app/views/signup.ejs
@@ -15,6 +15,7 @@
 </head>
 <body>
 
+<script type="text/javascript" src="/socket.io/socket.io.js"></script>
 <script type="text/javascript" src="/lib/angular/angular.js"></script>
 <script type="text/javascript" src="/lib/angular-route/angular-route.js"></script>
 <script type="text/javascript" src="/lib/angular-resource/angular-resource.js"></script>
@@ -33,6 +34,12 @@
 
 <script type="text/javascript" src="/users/users.client.module.js"></script>
 <script type="text/javascript" src="/users/services/authentication.client.service.js"></script>
+
+<!-- Load the chat module -->
+<script type="text/javascript" src="/chat/chat.client.module.js"></script>
+<script type="text/javascript" src="/chat/services/socket.client.service.js"></script>
+<script type="text/javascript" src="/chat/controllers/chat.client.controller.js"></script>
+<script type="text/javascript" src="/chat/config/chat.client.routes.js"></script>
 
 <script type="text/javascript" src="/application.js"></script>
 
