--- a/public/articles/views/create-article.client.view.html
+++ b/public/articles/views/create-article.client.view.html
@@ -1,7 +1,7 @@
 <!-- The create article view -->
 
 <section ng-include="'example/views/example.client.view.html'"></section>
-<div class="panel-body">
+<div id ="sidebar" class="panel-body">
 	<section data-ng-controller="ArticlesController">
 		<h1>New Article</h1>
 		<!-- The new article form -->
@@ -26,7 +26,7 @@
 			</div>
 			<div>
 				<div>
-					<label for="tags">Add tag (separated by commas)</label>
+					<label for="tags">Add tag</label>
 					<div>
 						<input type="text" data-ng-model="tags" id="tags" placeholder="Content">
 						<button class="btn btn-primary" ng-click="addTag(tags)" >+</button>
@@ -43,7 +43,7 @@
 				</ul>
 
 				<input type="submit" class="btn btn-primary" value="Create" id = "CreateArticle" ng-click="create()">
-				<button class="btn btn-primary" ng-click="cancelEdit()">Cancel</button>
+				<button class="btn btn-danger" ng-click="cancelEdit()">Cancel</button>
 			</div>
 			<!-- The error message element -->
 			<div data-ng-show="error">
